--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,7 +1,7 @@
 [buildout]
 extends =
-    https://raw.github.com/collective/buildout.plonetest/master/test-4.3.x.cfg
-    plone-4.3.x.cfg
+    https://raw.github.com/collective/buildout.plonetest/master/test-5.0.x.cfg
+    plone-master.cfg
 package-name = plone.api
 package-extras = [test]
 test-eggs = Pillow
